fixed alignment for mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -52,7 +52,6 @@ nav ul {
 .title {
     font-family: "Inter", sans-serif;
     /* margin-left: 20px; */
-    font-size: 1.5em;
     margin: 25px 0 25px 20px;
 }
 
@@ -99,6 +98,7 @@ nav ul {
 article h1 {
     margin: 0;
     padding: 0;
+    font-size: 1.5rem;
 }
 
 #introduction h1{
@@ -131,6 +131,7 @@ article h1 {
     border-radius: 15px;
     border: 1px solid var(--primary-color);
     overflow: hidden;
+    
 }
 
 
