--- a/styles/projects.css
+++ b/styles/projects.css
@@ -6,6 +6,7 @@
 
 #article-1 h1 {
     margin: 0;
+    font-size: 15vw;
 }
 
 .projects-main-container {
